--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <link rel="icon" type="image/png" href="favicon.png" />
+      <title>Celebetrip : découvrez Paris autrement</title>
+      <link rel="icon" type="image/png" href="celebetrippastille.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Celebetrip : découvrez Paris avec pour assistant une célébrité d'hier ou d'aujourd'hui</title>
+        <meta name="theme-color" content="#071e2f">
+        <meta name="description" content="Celebetrip est une application mobile qui permet de découvrir Paris avec une célébrité d'hier ou d'aujourd'hui. Le Paris d'Hugo, le Paris de piaf, le paris de la Pévolution Française... Startup en développement.">
         <link rel="stylesheet" href="style.css">
 <!-- Bootstrap -->    
         <!-- Latest compiled and minified CSS -->
@@ -17,92 +19,93 @@
         src="https://code.jquery.com/jquery-3.2.1.js"
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
         crossorigin="anonymous">
-        </script>   
-  </head>
+        </script> 
+      
+      <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+      
+    </head>
+      
+     
   
-  <body>
+  
+<body id="body" class="clearfix"> 
+    <div class="photo_main">
+    
+    <!-- menu login haut droite -->  
+    <div class='box foo'>
+    LOGIN
+    </div>        
+<!--fin-->
+  
+    
+<!--
+bonhomme  
+<i class="fas fa-child"></i>
+adresse book
+<i class="far fa-address-book"></i>
+<!--fin-->
       
-<!-- logo celebetrip -->      
+     
+      
+<!-- logo celebetrip   
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
-                    <div class="logo">
-                    <center> <img src="images/logo.png" class="img-responsive"/></center>
+                    <div class="tel">
+                     <img src="images/Photo main.png" class="img-responsive"/>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
       
-<!-- pastilles celebrites -->     
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <div class="entete">
-                        <h4>Découvrez Paris</h4>
-                        <h4>avec pour compagnon de voyage </h4>
-                        <h4>une célébrité d’hier ou d’aujourd’hui</h4>
-                        <p><center> <img src="images/photopastille.png" class="img-responsive""center"/> </center></p>
+      <!-- Main telephone--> 
+<div> 
+    
 
-                        
-                        <div class="button">
-                            <a href="file:///C:/Users/famil/Documents/CELEBETRIP/celebrités.html" type="button" class="btn btn-primary active">Et bien d'autres... <br> Découvrez-les !</a> 
-                        </div> 
-                        
-                    </div>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-xs-12">
+     <!--<div class="floating-box1"><h1 style=center >Découvrez le Paris de-->                        
+    <!-- essai texte mouv 2  <div class="floating-box1">   --> 
+            <span class="float: left; text-align: left">
+                <div id=container>
+                    Découvrez 
+                    <h3>le Paris de </h3>
+                      <div id=flip> 
+                        <div><div>Victor Hugo</div></div>
+                        <div><div>Edith Piaf</div></div>
+                        <div><div>Emile Rodin</div></div>
+                        <div><div>Gunsbourg</div></div><!-- PROBLEME n'apparait pas dans le code. A voir --> 
+                        <div><div>La Révolution française</div></div><!-- PROBLEME n'apparait pas dans le code. A voir --> 
+                      </div>
+                    <br>
+                    <h4>Vous êtes FAN d'une célébrité et connaissez tous ses secrets ? <br><br>
+                    Devenez embassadeur et contribuez à la découverte de cet artiste </h4>  
                 </div>
+            </span>
+                    
             </div>
         </div>
-      
-<!-- gargouille 1 -->    
-        <div class="container background image">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <div class="gar1">
-                        <div  class="gar2">
-                        <img src="images/paris1.png">
-                        </div>
-                        
-                        <div class="gartexte">
-                        <h3>Restez connecté ! </h3>
-                        <h4>Avec l'appli des gens célèbres qui vous suit partout</h4>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-        </div>
-      
-<!-- chatbot -->           
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <center><img src="images/operateur2.png" class="img-responsive"/></center><br/>
-                    <p>Premier assistant app/chatbot qui scénarise vos visites touristiques dans Paris</p>
-                </div>
-            </div>
-        </div> 
-           
- <!-- gargouille 2 -->  
-        <div class="container background image">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <div class="gar1">
-                         <div  class="gar2">
-                            <img src="images/paris2.png">
-                        </div>
-                    </div> 
-                </div>
-            </div>
-        </div>
+    </div>
+</div> 
 
-      
+    
+<!-- celebetrip ecriture verticale droite -->
+    <div class="col-3 hidden-xs-down">
+        <span class="text-vertical-span"><b>celebetrip</b></span>
+        
+    </div> 
+<!--fin
+    
 
                   
-<!--essai footer 3-->
+<!--essai footer 3--> <!---->
 
         <footer id="footer" class="clearfix">
             <div id="footer-widgets">
                 <div class="container">
-                    <div id="footer-wrapper">
+                  <div id="footer-wrapper">
                         <div class="row">
                             <div class="col-sm-6 col-md-2">
                               <div id="meta-3" class="widget widgetFooter widget_meta">
@@ -110,6 +113,7 @@
                                   <ul>
                                   <li><a href="#"><i class="fa fa-home fa-fw"></i> Home</a></li>
                                   <li><a href="privacypolicy.php"><i class="fa fa-link"></i> Mentions légales</a></li>
+                                  <li><a href="privacypolicy.php"><i class="fa fa-link"></i> Conditions générales d'utilisation</a></li>
                                   <li><a href="#"><i class="fa fa-envelope fa-fw"></i> Contactez-nous</a></li>
                                 </ul>
                               </div>      
@@ -172,76 +176,18 @@
             </div> <!-- end #footer-widgets -->
 
 <!--copyright-->
-            <div class="footer-bottom">
                <div class="container">
                   <div class="row">
                      <div class="col-xs-5" >
                         <div class="copyright">
-                        <p style="font-size: 12px">© 2017, Celebetrip, All rights reserved </p>
+                        <p style="font-size: 12px"><!--© 2018, Celebetrip, All rights reserved --></p>
                         </div>
-                        <div id="sub-floor">
-                        </div>       
                     </div>
                    </div>
-                </div>
-             </div> 
+                </div>   
       </footer>
-<!-- fin footer essai 2-->
+<!-- fin footer essai 2
     
 
 
-      
    
-      
-      
-       <!-- <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                </div>
-            </div>
-        </div>
-              
- 
-logo haut page          
-                        <div class="row">
-                                <div class="col-sm-12 col-xs-12">
-                                    <h2>Bienvenue sur Celebetrip</h2>
-                                    <h3>Choisissez votre compagnon <br> parmi notre selection de célébrités</h3>
-                                    <p> </p>
-                                    <div class="nb_com" style="display:none">9</div>
-                                </div>
-                         </div> 
-                    </div> 
-                
- HUGO                      
-                    <div class="container">
-                        <div class="row">    
-                            <div class="col-xs-12 border"> 
-                                <div class="col-xs-offset-1 col-xs-2">    
-                                    <div class="artiste">  
-                                        <div style="text-align:center">
-                                            <img src="images/hugopastille.png"/>
-                                            <p>10 circuits <br> 2 à 6 jours </p>
-
-                                        <button name="choix" id="submit" type="submit" value="submit" class="btn btn-default"> <a href="file:///C:/Users/famil/Documents/CELEBETRIP/circuit-hugo.html" >Découvrez Paris <br> avec Hugo </a><span class="glyphicon glyphicon-chevron-right"></span>
-                                        </button> 
-                                    
-                                        </div>
-                                    </div>
-                                </div>
-                    
-                                <div class="col-xs-offset-2 col-xs-7"> 
-                                    <div class="artiste"> 
-                                        <div style="text-align:left">
-                                            <span class="left_align">
-
-                                            <h1>Victor Hugo</h1>
-                                            <p>Ce parcours guidé vous permet de découvrir Paris avec Victor Hugo ; vous serez amusé par les nombreuses anacdotes de sa vie parisiennes tout au long de votre parcours, ses pensées, ses souvenirs, le Paris qu'il a aimé. </p>
-                                            </span>
-                                    
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
