--- a/views/home.ejs
+++ b/views/home.ejs
@@ -99,6 +99,65 @@ adresse book
 <!--fin
     
 
+  
+<!-- menu déroulant artistes -->
+<div>
+    <div>
+        <span class="float: right; text-align: right ">
+          <div class="band">
+            <div class="content">
+                <h4><center><br><strong>Choisissez votre célébrité préférée  <br>et découvrez son histoire <br> lors de vos promenades dans Paris</strong></center></h4>
+                <br>
+                <div class="row">
+                    <div class="col-sm-12 col-xs-12">
+                        <ul id="menu-demo2">
+                            <li><a href="#">Chanteurs</a>
+                                <ul>
+                                    <li><a href="#">Edith Piaf</a></li>
+                                    <li><a href="#">Jacques Brel</a></li>
+                                    <li><a href="#">Gunsbourg</a></li>
+                                    <li><a href="#">Johnny Haliday</a></li>
+                                    <li><a href="#">Proposer un chanteur</a></li>
+                                </ul>
+                            </li>
+                                <li><a href="#">Ecrivains</a>
+                                <ul>
+                                    <li><a href="#">Victor Hugo</a></li>
+                                    <li><a href="#">Pierre de Ronsar</a></li>
+                                    <li><a href="#">Proposer un écrivain</a></li>
+                                </ul>
+                            </li> 
+                            <li><a href="#">Peintres/sculpteur</a>
+                                <ul>
+                                    <li><a href="#">Monet</a></li>
+                                    <li><a href="#">Emile Rodin</a></li>
+                                    <li><a href="#">Proposer un peintres/sculpteur</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Thématique</a>
+                                <ul>
+                                    <li><a href="#">La Révolution française</a></li>
+                                    <li><a href="#">Le Paris romantique</a></li>
+                                    <li><a href="#">Street Art</a></li>
+                                    <li><a href="#">Paris politique</a></li>
+                                    <li><a href="#">Paris insolite</a></li>
+                                    <li><a href="#">Proposer une thématique</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div> 
+                    <br>
+                <h3><center><br>Comment tester Celebetrip ? </center></h3>
+                </div>
+            </div> 
+        </div>
+        </span>
+    </div>
+</div>
+</div>
+<!--fin-->
+
+
                   
 <!--essai footer 3--> <!---->
 
