--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@
     color: #AAA;
     display: block        
 }
-/* Photo main portable */
+/* ---------------------------------------Photo main portable -----------------------------------*/
 .photo_main {
   background-repeat: no-repeat;
   background-image: url("images/Photo main.png");	
@@ -20,24 +20,7 @@
 .box {
   position: absolute;
   vertical-align: middle;
-  color: #a0762e;
-  display: inline-block;
-  font-weight:bold;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  letter-spacing: 0.4em;
-  font-family: "Arial", serif;
-  font-size: 12px;
-  transition: 0.5s;
-  padding: 0 20px;
-  cursor: pointer;
-  border: 1px solid rgb(10, 44, 56);
-  -webkit-transition: 0.5s;
-}
-.box {
-  position: absolute;
-  vertical-align: middle;
+border-spacing: 5px;
   color: #a0762e;
   display: inline-block;
   font-weight:bold;
@@ -68,9 +51,8 @@
   left: 0;
   box-sizing: border-box;
   -webkit-transform: scale(0);
-  transition: 0.5s;
+  transition: 0.8s;
 }
-
 .foo::before {
   border-bottom: 1px solid #a0762e;
   border-left: 1px solid #a0762e;
@@ -85,7 +67,7 @@
 .box:hover::before {
   -webkit-transform: scale(1);
 }
-/* --------------------------------------TEXTES ARTISTES MOUV---------------------------------------*/
+/* --------------------------------------TEXTES ARTISTES EN MOUVEMENT---------------------------------------*/
 #container {
   color:#a0762e;
   font-size:66px;
@@ -129,15 +111,15 @@
   99.99% {margin-top:0px;}
   100% {margin-top:-270px;}
 }
-p {
+/*p {
   position:fixed;
   width:100%;
   bottom:50px;
   font-size:20px;
   color:#a0762e;
   margin-top:200px;
-}
- /*------------------------- celebetrip ecriture verticale gauche --------------------------------*/
+}*/
+ /*------------------------- "celebetrip" >> ecriture verticale gauche --------------------------------*/
 .text-vertical-span {
   -webkit-writing-mode: vertical-rl;
   -ms-writing-mode: tb-rl;
@@ -157,6 +139,217 @@ p {
   transition: opacity 0.5s;
   font-size:12px;
   color:#a0762e;
+}
+
+/* ----------------------------------------menu CHOIX artistes----------------------------------------------*/
+#menu-demo2, #menu-demo2 ul{
+padding:0;
+margin:0;
+list-style:none;
+text-align:center;   
+}
+#menu-demo2 li{
+display:inline-block;
+position:relative;
+border-radius:8px 8px 0 0;
+}
+#menu-demo2 ul li{
+display:inherit;
+border-radius:0;
+}
+#menu-demo2 ul li:hover{
+border-radius:0;
+}
+#menu-demo2 ul li:last-child{
+border-radius:0 0 8px 8px;
+}
+#menu-demo2 ul{
+position:absolute;
+z-index: 1000;
+max-height:0;
+left: 0;
+right: 0;
+overflow:hidden;
+-moz-transition: .8s all .3s;
+-webkit-transition: .8s all .3s;
+transition: .8s all .3s;
+}
+#menu-demo2 li:hover ul{
+max-height:15em;
+}
+/* background des liens menus */
+#menu-demo2 li:first-child{
+background-color: #65537A;
+background-image:-webkit-linear-gradient(top, #D7B763 0%, #a0762e 100%);
+background-image:linear-gradient(to bottom, #D7B763 0%, #a0762e 100%);
+}
+#menu-demo2 li:nth-child(2){
+background-color: #729EBF;
+background-image: -webkit-linear-gradient(top, #D7B763 0%, #a0762e 100%);
+background-image:linear-gradient(to bottom, #D7B763 0%, #a0762e 100%);
+}
+#menu-demo2 li:nth-child(3){
+background-color: #F6AD1A;
+background-image:-webkit-linear-gradient(top, #D7B763 0%, #a0762e 100%);
+background-image:linear-gradient(to bottom, #D7B763 0%, #a0762e 100%);
+}
+#menu-demo2 li:last-child{
+background-color: #CFFF6A;
+background-image:-webkit-linear-gradient(top, #D7B763 0%, #a0762e 100%);
+background-image:linear-gradient(to bottom, #D7B763 0%, #a0762e 100%);
+}
+/* background des liens sous menus */
+#menu-demo2 li:first-child li{
+background:#D7B763;
+}
+#menu-demo2 li:nth-child(2) li{
+background:#D7B763;
+}
+#menu-demo2 li:nth-child(3) li{
+background:#D7B763;
+}
+#menu-demo2 li:last-child li{
+background:#D7B763;
+}
+/* background des liens menus et sous menus au survol */
+#menu-demo2 li:first-child:hover, #menu-demo2 li:first-child li:hover{
+background:#18627D;
+}
+#menu-demo2 li:nth-child(2):hover, #menu-demo2 li:nth-child(2) li:hover{
+background:#18627D;
+}
+#menu-demo2 li:nth-child(3):hover, #menu-demo2 li:nth-child(3) li:hover{
+background:#18627D;
+}
+#menu-demo2 li:last-child:hover, #menu-demo2 li:last-child li:hover{
+background:#18627D;
+}
+/* les a href */
+#menu-demo2 a{
+text-decoration:none;
+display:block;
+padding:8px 32px;
+color:rgb(10, 44, 56);
+font-family:arial;
+Font-Weight: Bold
+}
+#menu-demo2 ul a{
+padding:8px 0
+}
+#menu-demo2 li:hover li a{
+color:rgb(10, 44, 56);
+text-transform:inherit
+}
+#menu-demo2 li:hover a, #menu-demo2 li li:hover a{
+color:#000;
+}
+/* --------Liens de couleur vert et rouge marquant les artistes actifs ou non--------*/
+la {
+  font-family:arial;
+  font-size:14px;
+  background:-webkit-linear-gradient(0, #01F700 50%, rgb(10, 44, 56) 50%);
+  
+  cursor:default;
+  background-position:100% 0;
+  background-size:200% 100%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  -webkit-transition:background-position .2s cubic-bezier(0,0,.5,1)}
+
+la:hover {
+  background-position:0 0}
+lb {
+  font-family:arial;
+  font-size:14px;
+  background:-webkit-linear-gradient(0, red 50%, rgb(10, 44, 56) 50%);
+  cursor:default;
+  background-position:100% 0;
+  background-size:200% 200%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  -webkit-transition:background-position .2s cubic-bezier(0,0,.5,1)}
+
+lb:hover {
+  background-position:0 0}
+
+/** ----------------------essai bande couleur jaune Page------------------ */
+.wrapper {
+  width: 100%;
+ height : 200px
+}
+.band {
+  color: rgb(10, 44, 56);
+  background-color: #a0762e;
+  margin-top: 200px
+}
+.content {
+  width: 900px;
+  max-width: 100%;
+  height : 850px; /* hauteur de la bande jaune */
+  max-height :30%;
+  margin: auto
+}
+.h3{
+  margin-top: 100px;  
+}
+
+
+img {
+	width: 150px;
+	height: 150px;
+    margin: 10px 30px 3px 30px;
+    
+}
+/* ------------------------textes des bulles tester celebetrip----------------------------------------*/
+
+p.ex1{
+    margin: 3px 0px 20px 0px;
+    text-align: center;
+    font-weight: Bold;
+    font-size: 20px;
+    color : #D7B763
+}
+p.ex2
+{
+    margin: 10px 0px 7px 0px;
+    text-align: justify;
+    font-size: 15px;
+    color : #FFF8E6
+}
+p.ex3{
+    margin: 110px 0px 5px 0px;
+    text-align: center;
+    font-weight: Bold;
+    font-size: 30px;
+    color : #D7B763
+}
+p.ex4{
+    margin: 5px 0px 5px 0px;
+    text-align: center;
+    font-weight: Bold;
+    font-size: 35px;
+    color : #D7B763
+}
+p.ex5{
+    margin: 5px 0px 5px 0px;
+    text-align: center;
+    font-weight: Bold;
+    font-size: 18px;
+    color : #18627D
+}
+p.ex6{
+    margin: 30px 0px 5px 0px;
+    text-align: center;
+    font-weight: Bold;
+    font-size: 30px;
+    color : #D7B763
+}
+p.ex7{
+    margin: 5px 0px 5px 0px;
+    text-align: center;
+    font-weight: Bold;
+    font-size: 20px;
+    color : #D7B763
 }
 
 /* -----------------------------------------FOOTER HOME ----------------------------------------------*/
@@ -197,127 +390,31 @@ p {
     color: #AAA;
 }
 
-/* -----------------------------------------menu artistes----------------------------------------------*/
+/* -----------------------------------------    ----------------------------------------------*/
+la {
+  font-family:arial;
+  font-size:14px;
+  background:-webkit-linear-gradient(0, #01F700 50%, rgb(10, 44, 56) 50%);
+  
+  cursor:default;
+  background-position:100% 0;
+  background-size:200% 100%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  -webkit-transition:background-position .2s cubic-bezier(0,0,.5,1)}
 
+la:hover {
+  background-position:0 0}
+lb {
+  font-family:arial;
+  font-size:14px;
+  background:-webkit-linear-gradient(0, red 50%, rgb(10, 44, 56) 50%);
+  cursor:default;
+  background-position:100% 0;
+  background-size:200% 200%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  -webkit-transition:background-position .2s cubic-bezier(0,0,.5,1)}
 
-#menu-demo2, #menu-demo2 ul{
-padding:0;
-margin:0;
-list-style:none;
-text-align:center;
-    
-}
-#menu-demo2 li{
-display:inline-block;
-position:relative;
-border-radius:8px 8px 0 0;
-}
-#menu-demo2 ul li{
-display:inherit;
-border-radius:0;
-}
-#menu-demo2 ul li:hover{
-border-radius:0;
-}
-#menu-demo2 ul li:last-child{
-border-radius:0 0 8px 8px;
-}
-#menu-demo2 ul{
-position:absolute;
-z-index: 1000;
-max-height:0;
-left: 0;
-right: 0;
-overflow:hidden;
--moz-transition: .8s all .3s;
--webkit-transition: .8s all .3s;
-transition: .8s all .3s;
-}
-#menu-demo2 li:hover ul{
-max-height:15em;
-}
-/* background des liens menus */
-#menu-demo2 li:first-child{
-background-color: #65537A;
-background-image:-webkit-linear-gradient(top, #F6AD1A 0%, #a0762e 100%);
-background-image:linear-gradient(to bottom, #F6AD1A 0%, #a0762e 100%);
-}
-#menu-demo2 li:nth-child(2){
-background-color: #729EBF;
-background-image: -webkit-linear-gradient(top, #F6AD1A 0%, #a0762e 100%);
-background-image:linear-gradient(to bottom, #F6AD1A 0%, #a0762e 100%);
-}
-#menu-demo2 li:nth-child(3){
-background-color: #F6AD1A;
-background-image:-webkit-linear-gradient(top, #F6AD1A 0%, #a0762e 100%);
-background-image:linear-gradient(to bottom, #F6AD1A 0%, #a0762e 100%);
-}
-#menu-demo2 li:last-child{
-background-color: #CFFF6A;
-background-image:-webkit-linear-gradient(top, #F6AD1A 0%, #a0762e 100%);
-background-image:linear-gradient(to bottom, #F6AD1A 0%, #a0762e 100%);
-}
-/* background des liens sous menus */
-#menu-demo2 li:first-child li{
-background:#F6AD1A;
-}
-#menu-demo2 li:nth-child(2) li{
-background:#F6AD1A;
-}
-#menu-demo2 li:nth-child(3) li{
-background:#F6AD1A;
-}
-#menu-demo2 li:last-child li{
-background:#F6AD1A;
-}
-/* background des liens menus et sous menus au survol */
-#menu-demo2 li:first-child:hover, #menu-demo2 li:first-child li:hover{
-background:#F6AD1A;
-}
-#menu-demo2 li:nth-child(2):hover, #menu-demo2 li:nth-child(2) li:hover{
-background:#F6AD1A;
-}
-#menu-demo2 li:nth-child(3):hover, #menu-demo2 li:nth-child(3) li:hover{
-background:#F6AD1A;
-}
-#menu-demo2 li:last-child:hover, #menu-demo2 li:last-child li:hover{
-background:#F6AD1A;
-}
-/* les a href */
-#menu-demo2 a{
-text-decoration:none;
-display:block;
-padding:8px 32px;
-color:#fff;
-font-family:arial;
-}
-#menu-demo2 ul a{
-padding:8px 0;
-}
-#menu-demo2 li:hover li a{
-color:#fff;
-text-transform:inherit;
-}
-#menu-demo2 li:hover a, #menu-demo2 li li:hover a{
-color:#000;
-}
-
-
-/** essai bande couleur jaune Page */
-.wrapper {
-  width: 100%;
- height : 200px
-}
-.band {
-  color: rgb(10, 44, 56);
-  background-color: #a0762e;
-  margin-top: 200px
-}
-.content {
-  width: 900px;
-  max-width: 100%;
-  height : 384px;
-  max-height :30%;
-  margin: auto
-}
-
+lb:hover {
+  background-position:0 0}
