--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,42 +27,20 @@
       
      
   
-  
-<body id="body" class="clearfix"> 
-    <div class="photo_main">
-    
-    <!-- menu login haut droite -->  
-    <div class='box foo'>
-    LOGIN
-    </div>        
+<body id="body"> 
+    <div class="clearfix"> 
+ <!---------PART 1 ------------------------Home Page----------------------------PART 1-------------------------------------------------------------------------------------------------->   
+        <div class="photo_main">
+        <!-- menu login haut droite -->  
+            <div class='box foo'>
+                <span class="glyphicon glyphicon-log-in"></span>
+                SE CONNECTER 
+            </div>        
 <!--fin-->
-  
-    
-<!--
-bonhomme  
-<i class="fas fa-child"></i>
-adresse book
-<i class="far fa-address-book"></i>
-<!--fin-->
-      
      
       
-<!-- logo celebetrip   
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12">
-                    <div class="tel">
-                     <img src="images/Photo main.png" class="img-responsive"/>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-      
-      <!-- Main telephone--> 
-<div> 
-    
-
-    
+<!-- Main telephone--> 
+<div>   
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-xs-12">
@@ -81,7 +59,12 @@ adresse book
                       </div>
                     <br>
                     <h4>Vous êtes FAN d'une célébrité et connaissez tous ses secrets ? <br><br>
-                    Devenez embassadeur et contribuez à la découverte de cet artiste </h4>  
+                    Devenez embassadeur et contribuez à la découverte de cet artiste </h4> 
+                        <div class='box foo'>
+                        Testez celebetrip ! 
+                        <span class="glyphicon glyphicon-user"></span>
+                        Inscription
+                        </div>
                 </div>
             </span>
                     
@@ -98,66 +81,122 @@ adresse book
     </div> 
 <!--fin
     
-
+<!---------------------------------------------------------------------------------------------PART 2 ------------------------------------Choix Artistes------------------------------------------------------------------------------------------------------------------------------->
   
+<!-- menu déroulant artistes -->
 <!-- menu déroulant artistes -->
 <div>
     <div>
         <span class="float: right; text-align: right ">
           <div class="band">
             <div class="content">
-                <h4><center><br><strong>Choisissez votre célébrité préférée  <br>et découvrez son histoire <br> lors de vos promenades dans Paris</strong></center></h4>
+                <br>
+                <p class="ex6">Choisissez votre célébrité préférée  </p>
+                <p class="ex7">et découvrez son histoire lors de vos promenades dans Paris</p>
                 <br>
                 <div class="row">
                     <div class="col-sm-12 col-xs-12">
                         <ul id="menu-demo2">
-                            <li><a href="#">Chanteurs</a>
+                            <li><a href="#">Les chanteurs de Paris</a>
                                 <ul>
-                                    <li><a href="#">Edith Piaf</a></li>
-                                    <li><a href="#">Jacques Brel</a></li>
-                                    <li><a href="#">Gunsbourg</a></li>
-                                    <li><a href="#">Johnny Haliday</a></li>
+                                    <li><a href="#"><la>Edith Piaf</la></a></li>
+                                    <li><a href="#"><lb>Jacques Brel</lb></a></li>
+                                    <li><a href="#"><lb>Gunsbourg</lb></a></li>
+                                    <li><a href="#"><lb>Johnny Haliday</lb></a></li>
                                     <li><a href="#">Proposer un chanteur</a></li>
                                 </ul>
                             </li>
-                                <li><a href="#">Ecrivains</a>
+                                <li><a href="#">Les écrivains </a>
                                 <ul>
-                                    <li><a href="#">Victor Hugo</a></li>
-                                    <li><a href="#">Pierre de Ronsar</a></li>
+                                    <li><a href="#"><la>Victor Hugo</la></a></li>
+                                    <li><a href="#"><lb>Pierre de Ronsard</lb></a></li>
                                     <li><a href="#">Proposer un écrivain</a></li>
                                 </ul>
                             </li> 
-                            <li><a href="#">Peintres/sculpteur</a>
+                            <li><a href="#">Les peintres/sculpteurs </a>
                                 <ul>
-                                    <li><a href="#">Monet</a></li>
-                                    <li><a href="#">Emile Rodin</a></li>
+                                    <li><a href="#"><lb>Monet</lb></a></li>
+                                    <li><a href="#"><lb>Emile Rodin</lb></a></li>
                                     <li><a href="#">Proposer un peintres/sculpteur</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Thématique</a>
+                            <li><a href="#">Les thématiques sur Paris</a>
                                 <ul>
-                                    <li><a href="#">La Révolution française</a></li>
-                                    <li><a href="#">Le Paris romantique</a></li>
-                                    <li><a href="#">Street Art</a></li>
-                                    <li><a href="#">Paris politique</a></li>
-                                    <li><a href="#">Paris insolite</a></li>
+                                    <li><a href="#"><lb>La Révolution française</lb></a></li>
+                                    <li><a href="#"><lb>Paris romantique</lb></a></li>
+                                    <li><a href="#"><lb>Street Art</lb></a></li>
+                                    <li><a href="#"><lb>Paris politique</lb></a></li>
+                                    <li><a href="#"><lb>Paris insolite</lb></a></li>
                                     <li><a href="#">Proposer une thématique</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </div> 
-                    <br>
-                <h3><center><br>Comment tester Celebetrip ? </center></h3>
+                    
+                
+                    
+                    <div class="clearfix">
+                        <p class="ex3">Le concept </p>
+                        <p class="ex4">Comment ça marche ? </p>
+                        <div class="col-sm-3 col-md-3 col-lg-3 position:fixed">
+                            <img src="/images/tablette.png">
+                            <p class="ex1">Téléchargez l'appli <br></p>
+                            <p class="ex2">FAN d'une célébrité ? <br>Téléchargez l'appli sur votre smartphone pour Android et IOS (sept.) </p> 
+                            <p class="ex5">C'est GRATUIT ! </p>  
+                            <p class="ex2">Et devenez embassadeur de votre celebrité favorite.<br>Lien vers stores : <span class="glyphicon glyphicon-log-in"></span>
+                            </p>
+                            
+                        </div>
+                        
+                        <div class="col-sm-3 col-md-3 col-lg-3 position:fixed">
+                            <img src="/images/ecrire.png">
+                            <p class="ex1">Rédigez <br></p>
+                            <p class="ex2">De votre espace écrivez des anecdotes que seul vous connaissez, des histoires uniques  et partagez... <br>                          
+                            </p> 
+                            <p class="ex5">C'est AMUSANT ! </p>
+                            <p class="ex2">Avec des photos, des vidéos c'est encore mieux... <br> Se connecter :  <span class="glyphicon glyphicon-user"></span>                         
+                            </p> 
+                        </div>
+                        
+                        <div class="col-sm-3 col-md-3 col-lg-3 position:fixed">
+                            <img src="/images/map.png">
+                            <p class="ex1">Localisez<br></p>
+                            <p class="ex2">Une fois géolocalisés, vous et la communauté allez pouvoir découvrir cette célébrité en se promenant dans Paris </p>
+                            <p class="ex5">C'est SIMPLE ! </p> 
+                            <p class="ex2">Vous pourrez même dialoguer avec la célébrité en chat !<br>Voir le chat :  <span class="glyphicon glyphicon-comment"></span></p>
+                        </div>
+                        
+                        
+                        <div class="col-sm-3 col-md-3 col-lg-3 position:fixed">
+                            <img src="/images/tel.png">
+                            <p class="ex1">Découvrez  </p>
+                            <p class="ex2">Il ne vous reste plus qu'à visiter Paris autrement avec tous les secrets d'une célébrité</p>
+                            <p class="ex5">C'est PARIS ! </p> 
+                            <p class="ex2">Découvrez les autant de fois que vous le souhaitez<br>Tester Hugo :  <span class="glyphicon glyphicon-eye-open"></span></p>
+                        </div>
+                        
+                    </div>
+                    
+               </div>
                 </div>
-            </div> 
-        </div>
-        </span>
+              </div>
+        </span>                   
+
     </div>
 </div>
 </div>
 <!--fin-->
 
+  </div>  
+<!----------------------------------------------------------------------------------------------------------------PART 3 -----------------------------Comment cela marche----------------------------------------PART 3------------------------------------------------------------------------------------------------------------------
 
+
+   
+<!----------------------------------------------------------------------------------------------------------------PART 4 ----------------------------User Carousel-----------------------------------------------PART 4------------------------------------------------------------------------------------------------------------------>
+
+    
+<!----------------------------------------------------------------------------------------------------------------PART 5 ---------------------------------------Footer-------------------------------------------PART 5------------------------------------------------------------------------------------------------------------------>
+<!--essai footer 3--> 
                   
 <!--essai footer 3--> <!---->
 
