--- a/views/home.ejs
+++ b/views/home.ejs
@@ -91,9 +91,12 @@
           <div class="band">
             <div class="content">
                 <br>
-                <p class="ex6">Choisissez votre célébrité préférée  </p>
-                <p class="ex7">et découvrez son histoire lors de vos promenades dans Paris</p>
-                <br>
+                  <p class="ex6">Vous êtes fan d'un célébrité ? <br> Vous connaissez tous ses secrets ? </p>
+                  <p class="ex7">Partager vos informations sur notre plateforme collaborative et découvrez le Paris de cet artiste. <br>C'est aussi permettre à la communauté de découvrir son histoire lors de promenades dans Paris.<br> <br>
+                  <p class="ex8">Nos artistes en cours de développement :</p>     
+                
+                
+                
                 <div class="row">
                     <div class="col-sm-12 col-xs-12">
                         <ul id="menu-demo2">
